Fixing some alignment issues

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -236,7 +236,7 @@ tr.TM-sectop td { padding:3px 2px 5px 2px; }
 	border:1px solid #999999;
 	width:250px;
 	float:left; 
-	margin-top:10px;
+	margin-top:12px;
 	-moz-border-radius:5px; 
 	-webkit-border-radius:5px; 
 	/*/-moz-box-shadow:inset 0 0 8px #000;*/
@@ -253,16 +253,16 @@ tr.TM-sectop td { padding:3px 2px 5px 2px; }
 
 /* drag handle */
 .handle { 
-	background:#fff url(../images/elements/slider.png) repeat-x 0 0; 
-	height:28px;
-	width:33px;
+	background:url(../images/elements/slider.png) repeat-x 0 0; 
+	height:29px;
+	width:35px;
 	top:-12px;
 	position:absolute; 
 	display:block; 
 	margin-top:1px;
 	border:0px solid #000;
 	text-align: center;
-	font-size:1.0em;
+	font-size:1em;
 	font-weight:bold;
 	letter-spacing:-0.07em;
 	color:#FFFFFF;
@@ -285,10 +285,6 @@ tr.TM-sectop td { padding:3px 2px 5px 2px; }
 	-webkit-border-radius:5px; 		
 }
 
-html {
-font-family:"Myriad Pro","Lucida Grande",Arial,sans-serif;
-}
-
 .left {
 	float:left; 
 	font-size:1.0em;
@@ -303,15 +299,15 @@ div.leftseconds {
 	float:left;
 	padding-right: 8px;
 	color:#000000;
-	padding-top: 3px;
+	margin-top: 7px;
 	font-weight: 800;
 }
 
 div.rightseconds {
 	float:left;
-	padding-top: 3px;
 	padding-left: 8px;
 	color:#000000;
 	font-weight: 800;
+	margin-top: 7px;
 
 }
